--- a/restaurant/barbecue/templates/barbecue/index.html
+++ b/restaurant/barbecue/templates/barbecue/index.html
@@ -8,7 +8,16 @@
 
 {% block body %}
 
-    <h3>Welcome to Barbecue Restaurant page. </h3>
-    <p>Hello, world!</p>
+    <div class="container">
+        <div id="background_index" class="">
+
+            <div class="center-div">
+                <div id="welcome_f" class="d-flex justify-content-center">Barbecue</div>
+                <div id="welcome_l" class="d-flex justify-content-center">Restaurant</div>
+            </div>
+
+        </div>
+    </div>
+
 
 {% endblock %}
