--- a/restaurant/barbecue/templates/barbecue/layout.html
+++ b/restaurant/barbecue/templates/barbecue/layout.html
@@ -20,6 +20,39 @@
 
 </head>
 <body>
+
+        <nav class="navbar navbar-expand-lg navbar-light custom-navbar">
+
+            <!-- Brand -->
+            <a class="navbar-brand" id="navbar_brand" href="{% url 'index' %}"></a>
+            
+            <!-- Colapse -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBarbecue" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarBarbecue">                             
+                    <ul class="navbar-nav ml-auto" id="itensNavbar">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">About us</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Menu</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Reservation</a>
+                    </li>
+                    <li class="nav-item active ">
+                        <a class="nav-link" href="#">Contacts</a>
+                    </li>
+                    </ul>                           
+              </div>         
+        </nav>
     
         {% block body %}
         {% endblock %}
