The page About us and Menu was been created. Start the form in Reservation

--- a/restaurant/barbecue/templates/barbecue/index.html
+++ b/restaurant/barbecue/templates/barbecue/index.html
@@ -9,7 +9,7 @@
 {% block body %}
 
     <div class="container">
-        <div id="background_index" class="">
+        <div id="background_index" >
 
             <div class="center-div">
                 <div id="welcome_f" class="d-flex justify-content-center">Barbecue</div>
