--- a/restaurant/barbecue/static/barbecue/styles.css
+++ b/restaurant/barbecue/static/barbecue/styles.css
@@ -34,6 +34,70 @@ html, body{
 
 }
 
+.content-about{
+
+    flex-direction: column;
+    text-align: justify;
+
+}
+
+.menu-title{
+
+    font-weight: bold;
+    color: gray;
+    cursor: pointer;
+
+}
+
+.menu-title>p>span:hover{
+
+    color: darkred;
+
+}
+
+.box-menu{
+
+    height: 50vh;
+    width: 50%;
+    margin: 10vh;
+
+}
+
+.box-menu>h4,p{
+
+    text-align: center;
+    padding-bottom: 3vh;
+}
+
+.box-menu>p{
+
+    text-align: justify;
+
+}
+
+.img-menu{
+
+    width: 100%;
+    height: 100%;
+
+}
+
+.displayMenu{
+
+    display: none;
+
+}
+
+.form_reservation{
+
+    flex-direction: column;
+
+
+}
+
+
+
+
 
 /* ID's */
 
@@ -59,6 +123,54 @@ html, body{
 
 }
 
+#background_reservation{
+
+    background-image: url('../img/restaurant-ambient2.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: static;
+    max-width: 100%;
+    height: 90vh;
+    filter: grayscale(70%);
+    /*animation: backindex 4s forwards;*/
+
+}
+
+#img-about{
+
+    background: url(../img/meat.svg);
+    background-size: contain;   
+    height: 8vh;
+    width: 8vh;
+    filter: grayscale(10%);
+
+}
+
+#squad{
+
+    height: 100%;
+    border: black 1px dashed;
+    border-radius: 2%;
+    padding: 5vh;
+
+}
+
+#title-about{
+
+    align-items: center;
+
+}
+
+#text-about{
+
+    font-family: librebaskerville, sans-serif;
+    font-size: 15px;
+    margin-top: 5vh;
+
+}
+
+
+
 #welcome_f{
 
    
@@ -83,7 +195,15 @@ html, body{
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
 
+
 }
+
+#beef_burguer, #mega_burguer,#nullan_dictum, #master_burguer, #sallad_caesar{
+
+    display: none;
+
+}
+
 
 @keyframes restaurant {
     
