--- a/restaurant/barbecue/templates/barbecue/layout.html
+++ b/restaurant/barbecue/templates/barbecue/layout.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="{% url 'reservation' %}">Reservation</a>
                     </li>
                     <li class="nav-item active ">
-                        <a class="nav-link" href="#">Contacts</a>
+                        <a class="nav-link" href="{% url 'contact' %}">Contacts</a>
                     </li>
                     </ul>                           
               </div>         
