--- a/restaurant/barbecue/templates/barbecue/menu.html
+++ b/restaurant/barbecue/templates/barbecue/menu.html
@@ -16,7 +16,7 @@
             <p>&nbsp<span id="mega">MEGA BURGUER</span>&nbsp - </p>
             <p>&nbsp<span id="nullan">NULLAN DICTUM</span>&nbsp - </p>
             <p>&nbsp<span id="master">BURGUER MASTER</span>&nbsp - </p>
-            <p>&nbsp<span id="sallad">CAESAR SALLAD</span>&nbsp</p>
+            <p>&nbsp<span id="sallad">CAESAR SALAD</span>&nbsp</p>
         </div>
 
         <!-- div options (hidden) -->
@@ -111,7 +111,7 @@
                 <div class="box-menu"><img src="../../static/img/sallad-caeser.jpg" class="img-menu" alt=""></div>
                 <div class="box-menu">
                     
-                    <h4>SALAD CAESAR</h4>
+                    <h4>CAESAR SALAD</h4>
                     <p>
                         In tempor efficitur risus, in tincidunt felis vestibulum at.<br>
                         Mauris non elit ultricies, commodo eros ut, suscipit diam. Nullam et egestas metus. <br>                                               
