--- a/restaurant/barbecue/static/barbecue/styles.css
+++ b/restaurant/barbecue/static/barbecue/styles.css
@@ -31,6 +31,7 @@ html, body{
 .custom-navbar{
 
     font-family: 'Montserrat';
+    font-size: 2.9vh;
 
 }
 
@@ -123,6 +124,12 @@ html, body{
 
 }
 
+#itensNavbar>li:hover{
+
+    border-bottom: 1px dashed black;
+
+}
+
 #background_index {
 
     background-image: url('../img/steak_index.jpg');
@@ -196,6 +203,7 @@ html, body{
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     margin-bottom: -5vh;
+
     
     
 
@@ -220,11 +228,81 @@ html, body{
 }
 
 #box_reservation{
-
-    background-color: gainsboro;
-    background-size: contain;
+   
     height: 50vh;
     align-items: center;
+    
+
+}
+
+#confirm_reservation{
+
+    width: 50vh;
+    height: auto;
+    margin-top: 5vh;
+    border: 1.5px black dashed;
+    border-radius: 3%;
+
+}
+
+#confirm_reservation>h3{
+    text-align: center;
+    text-decoration: underline;
+
+
+}
+
+#confirm_reservation>div{
+
+    font-size: 3vh;
+    align-content: center;
+
+}
+
+#confirm_reservation>div>p{
+
+    padding: 5vh;
+    border-right: 2px rgb(46, 46, 45) solid;
+    border-bottom: 2px rgb(46, 46, 45) solid;
+    
+
+}
+
+#confirm_reservation>div.row>span{
+
+    margin-top: 5vh;
+
+
+}
+
+#box_contact{
+
+    margin-top: 10vh;
+    width: 100%;
+    height: 50vh;
+
+}
+
+#row_contact{
+
+    align-items: center;
+    flex-direction: row;
+
+}
+
+#row_contact>p>img{
+
+    margin: 10vh;
+    width: 20vh;
+    height: 15vh;
+    cursor: pointer;
+    filter: grayscale(100%);
+
+}
+
+#row_contact>p>img:hover{
+
+    filter:grayscale(20%)
 
 }
 
@@ -232,12 +310,16 @@ html, body{
 @keyframes restaurant {
     
     0%{ transform: translateX(-50%);}
-
+    from{ opacity: 0%;}
+    to{opacity: 100%;}
 }
 
 @keyframes barbecue {
     
     0%{ transform: translateX(50%);}
+    from{ opacity: 0%;}
+    to{opacity: 100%;}
+                      
 
 }
 
